k8s/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "dokub-client.nippihub.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-service
            port:
              number: 80
      - pathType: Prefix
        path: /api/
        backend:
          service: 
            name: backend-service
            port:
              number: 3000
